--- a/EFNgApp/Views/_ViewImports.cshtml
+++ b/EFNgApp/Views/_ViewImports.cshtml
@@ -1,3 +1,3 @@
-@using EFNgAp
+@using EFNgApp
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
 @addTagHelper *, Microsoft.AspNetCore.SpaServices
